# windows-volume-utils

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: msvc.yml
app/: fix_return_type.patch  keyboard_hook.cpp  keyboard_listener.cpp  keyboard_listener.hpp  main.cpp
include/: audio_volume.hpp
src/: audio_volume.cpp
tests/: test_set_volume.cpp  test_toggle_mute.cpp
